# PythonClient

./: .gitignore  .readthedocs.yml  README.md  generate_enums.py  ordered_set_unusued.py  pyproject.toml  questions.txt  setup.py  test_fixture_update.py
.github/workflows/: pr-tests.yml  python-publish.yml
docs/: api_reference.rst  conf.py  examples.rst  quickstart.rst
examples/: basic_use.py
tests/: fixtures.py  test_accounts.py  test_billing_cycles.py  test_calls.py  test_paginated_list.py  test_reservations.py  test_sales.py  test_services.py  test_sms.py  test_textverified.py  test_verifications.py  test_wake_requests.py
tests/mock_endpoints/: api.pub.v2.account.me.json  api.pub.v2.area-codes.json  api.pub.v2.auth.json  api.pub.v2.billing-cycles.billingCycleID.invoices.json  api.pub.v2.billing-cycles.billingCycleID.json  api.pub.v2.fake-endpoint.json  api.pub.v2.list.page1.json  api.pub.v2.list.page2.json  api.pub.v2.pricing.rentals.json  api.pub.v2.sales.json  api.pub.v2.sales.saleID.json  api.pub.v2.services.json
tests/mock_endpoints_generated/: api.pub.v2.account.me.json  api.pub.v2.backorders.{id}.json  api.pub.v2.billing-cycles.json  api.pub.v2.billing-cycles.{id}.invoices.json  api.pub.v2.billing-cycles.{id}.json  api.pub.v2.billing-cycles.{id}.next-invoice.json  api.pub.v2.billing-cycles.{id}.renew.json  api.pub.v2.calls.access-token.json  api.pub.v2.calls.json  api.pub.v2.pricing.rentals.json  api.pub.v2.reservations.rental.nonrenewable.json  api.pub.v2.reservations.rental.nonrenewable.{id}.json  api.pub.v2.reservations.rental.renewable.json  api.pub.v2.reservations.rental.renewable.{id}.json  api.pub.v2.reservations.{id}.health.json  api.pub.v2.reservations.{id}.json  api.pub.v2.sales.{id}.json  api.pub.v2.services.json  api.pub.v2.sms.json  api.pub.v2.verifications.json  (+3 more)
textverified/: __init__.py  account.py  account_api.py  action.py  billing_cycle_api.py  billing_cycles.py  call_api.py  dtypes.py  exceptions.py  paginated_list.py  reservations_api.py  sales_api.py  services_api.py  sms_api.py  textverified.py  verifications_api.py  wake_api.py
(+2 files in other folders)
